# SDLTEst

./: CMakeLists.txt
source/: main.cpp
source/engine/: GameEngine.cpp  GameEngine.h  GameLogic.cpp  GameLogic.h  GameLogicInterface.h
source/engine/graph/: GameWindow.cpp  GameWindow.h
source/engine/graph/sprite/: ImageUtils.cpp  ImageUtils.h
